# olympiccoders-hackathon

./: .gitignore  README.md  WORKFLOW_ANALYSIS.md  env.example  generate.js  kill-langgraph.ps1  langgraph.json  pyproject.toml  test_api.py  test_backend.py  test_backend_streaming.py  test_performance.py
app/: __init__.py  config.py  graph.py
app/middleware/: __init__.py  image_extractor.py
app/tools/: __init__.py  chart_helpers.py  code_generator.py  design_tokens.py  flow_generator.py  image_generator.py  knowledge_store.py  screen_manager.py  style_analyzer.py  tool_state.py  url_scraper.py
beispiele/: 0 Description.txt
frontend/: env.example  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/gallery/: route.ts
frontend/src/app/api/generate/: route.ts
frontend/src/app/api/outputs/: route.ts
frontend/src/app/api/outputs/[filename]/: route.ts
frontend/src/app/api/preview/[id]/: route.ts
frontend/src/app/component/[id]/: page.tsx
frontend/src/app/preview/: page.tsx
frontend/src/components/: ai-generation-experience.tsx  code-preview.tsx  design-gallery.tsx  error-boundary.tsx  generation-chat.tsx  loading-screen.tsx  multi-workspace.tsx  style-dashboard.tsx  upload-zone.tsx
frontend/src/lib/: auto-open.ts  image-utils.ts  langgraph-client.ts  store.ts
