[project]
name = "hackathon-agent"
version = "0.1.0"
description = "Simple React Agent with Anthropic Claude"
authors = [
    {name = "Your Name", email = "your@email.com"},
]
dependencies = [
    "langchain>=1.1.0",
    "langgraph>=1.0.0",
    "langchain-anthropic>=0.3.0",
]

requires-python = ">=3.10,<3.13"

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

